--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -7,6 +7,7 @@
   "+JCU+Y": "Select this if you are configuring an on-prem connection",
   "+W2vTp": "Please enter an e-mail address",
   "+W9fkq": "(UTC+08:00) Kuala Lumpur, Singapore",
+  "+ZSBrq": "Context menu for {title} card",
   "+dlOgj": "(UTC-05:00) Haiti",
   "+g+mch": "Returns the body for a part in a multipart output of an action",
   "+iMTt7": "Check to select this connection",
@@ -163,7 +164,6 @@
   "4wjJs0": "14",
   "5+MuPz": "Enter a valid double.",
   "5FINOY": "Workflow has parameter validation errors on the following operations: {invalidNodes}",
-  "5HGtu7": "Function removed from current location. Function exists elsewhere.",
   "5J7j9k": "Required. The XPath expression to evaluate.",
   "5MWmiO": "Line Number",
   "5OvGgn": "Body",
@@ -266,7 +266,6 @@
   "AO6T9u": "Done",
   "AX7dq3": "Input node type does not match the schema node's type",
   "AYaqW/": "(UTC+06:30) Yangon (Rangoon)",
-  "AbZRJ7": "select all text in {label}",
   "AcdX+2": "Insert data from previous step (You can also add by typing / in the editor)",
   "Aci186": "{label} Add dynamic data pressing Alt + /",
   "AgrMqq": "Type of '{0}' is '{1}'.",
@@ -489,7 +488,6 @@
   "LvLksz": "Loading outputs",
   "LvpxiA": "Gateway",
   "Lwe7tQ": "(UTC+00:00) Dublin, Edinburgh, Lisbon, London",
-  "LxPh9u": "copy value of {label} to clipboard",
   "M/F2/O": "Notes can only be added while editing the inputs of a step.",
   "M0xrm+": "Code view",
   "M48CGd": "(UTC+11:00) Solomon Is., New Caledonia",
@@ -585,7 +583,6 @@
   "QEp3C8": "Convert the input to a JSON type value",
   "QGbUXX": "Status code",
   "QIOOQU": "No Items",
-  "QQYzHC": "Context menu for {title} card",
   "QZ5DZl": "alt text for chevron down",
   "QZBPUx": "Returns a single value matching the key name from form-data or form-encoded trigger output",
   "QZrxUk": "String functions",
@@ -700,6 +697,7 @@
   "W070M2": "of {max}",
   "W6FdMh": "Required. The name of the new property.",
   "WGwH45": "Clear",
+  "WK6hZX": "Select all text in {label}",
   "WLj8DH": "Please enter a valid dictionary",
   "WOOYW1": "Actions perform operations on data or communicate between systems to execute.",
   "WS9kXD": "Required. The first integer in the array.",
@@ -782,6 +780,7 @@
   "_+JCU+Y.comment": "Tooltip for on-prem gateway connection checkbox",
   "_+W2vTp.comment": "Placeholder description for a newly inserted Email parameter",
   "_+W9fkq.comment": "Timezone value ",
+  "_+ZSBrq.comment": "Accessibility label",
   "_+dlOgj.comment": "Timezone value ",
   "_+g+mch.comment": "Label for description of custom multipartBody Function",
   "_+iMTt7.comment": "aria label description for check button",
@@ -938,7 +937,6 @@
   "_4wjJs0.comment": "Hour of the day",
   "_5+MuPz.comment": "Error validation message",
   "_5FINOY.comment": "Error message to show when there are invalid connections in the nodes.",
-  "_5HGtu7.comment": "Message on deleting connection that exists in multiple spots",
   "_5J7j9k.comment": "Required xpath parameter to identify which xPath to evaluate",
   "_5MWmiO.comment": "The title of the line number field in the static result parseJson action",
   "_5OvGgn.comment": "The title of the body field in the static result query action",
@@ -1041,7 +1039,6 @@
   "_AO6T9u.comment": "Done Label for button",
   "_AX7dq3.comment": "Error message for when input node type does not match schema node type",
   "_AYaqW/.comment": "Timezone value ",
-  "_AbZRJ7.comment": "accessability label for a button to select all text in a value box",
   "_AcdX+2.comment": "Label for button to open dynamic content token picker",
   "_Aci186.comment": "This is an a11y message meant to help screen reader users figure out how to insert dynamic data",
   "_AgrMqq.comment": "Error message when having invalid authentication property types",
@@ -1264,7 +1261,6 @@
   "_LvLksz.comment": "Loading outputs text",
   "_LvpxiA.comment": "Column header for connection gateway",
   "_Lwe7tQ.comment": "Timezone value ",
-  "_LxPh9u.comment": "accessability label for a button to copy all text in a value box",
   "_M/F2/O.comment": "Text to tell users why notes are disabled",
   "_M0xrm+.comment": "Code view title",
   "_M48CGd.comment": "Timezone value ",
@@ -1360,7 +1356,6 @@
   "_QEp3C8.comment": "Label for description of custom json Function",
   "_QGbUXX.comment": "Response status code for test map API",
   "_QIOOQU.comment": "Message to show when there are no items to show",
-  "_QQYzHC.comment": "Accessability label",
   "_QZ5DZl.comment": "alt text for chevron down",
   "_QZBPUx.comment": "Label for description of custom triggerFormDataValue Function",
   "_QZrxUk.comment": "Label for string functions",
@@ -1475,6 +1470,7 @@
   "_W070M2.comment": "Text on a pager where people can select a page number out of {max}",
   "_W6FdMh.comment": "Required string parameter for new property name in addProperty function",
   "_WGwH45.comment": "Label to clear editor",
+  "_WK6hZX.comment": "Accessibility label for a button to select all text in a value box",
   "_WLj8DH.comment": "Error Message for Invalid Dictionary",
   "_WOOYW1.comment": "Description of what Actions are, on a tooltip about Actions",
   "_WS9kXD.comment": "Required number parameter to identify lower bound in range function",
@@ -1680,6 +1676,7 @@
   "_gMhc5o.comment": "Required string parameter required to combine strings",
   "_gQt/0f.comment": "Label for conversion functions",
   "_gRUmiA.comment": "Info about token picker",
+  "_gRyFIu.comment": "Accessibility label for a button to copy all text in a value box",
   "_gTXyUo.comment": "Label for timezone",
   "_gUp23R.comment": "Text for invalid operation title name",
   "_gWRF8m.comment": "title for trigger conditions setting",
@@ -1826,6 +1823,7 @@
   "_nx25nq.comment": "Hour of the day",
   "_ny75Ly.comment": "Parameter Field Value Placeholder Text",
   "_o/0SEj.comment": "Label for description of custom last Function",
+  "_o/FgET.comment": "Message to show when deleting a connection that exists in multiple places.",
   "_o14STH.comment": "Required XML parameter to apply xpath function on",
   "_o1HOyf.comment": "Accessibility label telling that the user is on page {current} of {max} pages",
   "_o2Cmny.comment": "Error validation message",
@@ -2199,6 +2197,7 @@
   "gMhc5o": "Required. The string to combine into a single string.",
   "gQt/0f": "Conversion functions",
   "gRUmiA": "Info",
+  "gRyFIu": "Copy value of {label} to clipboard",
   "gTXyUo": "Time Zone",
   "gUp23R": "The name already exists or is invalid, please update it before proceeding.",
   "gWRF8m": "Trigger Conditions",
@@ -2345,6 +2344,7 @@
   "nx25nq": "19",
   "ny75Ly": "Enter default value for parameter.",
   "o/0SEj": "Returns the last element in the array or string passed in",
+  "o/FgET": "Function was removed from the current location and currently exists elsewhere.",
   "o14STH": "Required. The XML on which to evaluate the XPath expression.",
   "o1HOyf": "{current_page} of {max_page}",
   "o2Cmny": "Enter a valid uri.",
