--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -4,13 +4,9 @@
   "+20fdv": "Invalid properties '{0}' for authentication type '{1}'.",
   "+3efoo": "No schema is added",
   "+DxBpE": "Failed loading the schema. Please try again.",
-  "+JCU+Y": "Select this if you are configuring an on-prem connection",
-  "+W2vTp": "Please enter an e-mail address",
   "+W9fkq": "(UTC+08:00) Kuala Lumpur, Singapore",
   "+ZSBrq": "Context menu for {title} card",
   "+dlOgj": "(UTC-05:00) Haiti",
-  "+g+mch": "Returns the body for a part in a multipart output of an action",
-  "+iMTt7": "Check to select this connection",
   "+jnjtp": "Select a Manual Workflow resource",
   "+lpuMl": "Required. The value to return if the expression is 'false'.",
   "+xiT4Q": "Pagination",
@@ -168,6 +164,7 @@
   "5MWmiO": "Line Number",
   "5OvGgn": "Body",
   "5SAQOb": "Authority",
+  "5UPOY+": "Select this if you are configuring an on-premises connection.",
   "5aa76N": "Returns the first element in the array or string passed in",
   "5akc1Q": "Unsupported 'in' value : ''{value}'' in Parameter",
   "5b0sKi": "Returns true if an object, array, or string is empty",
@@ -198,6 +195,7 @@
   "7Fyq1F": "No inputs",
   "7GSk99": "OK",
   "7KxCGX": "(UTC+10:30) Lord Howe Island",
+  "7LMY4I": "Enter an email address.",
   "7LmpNN": "Parameter \"{parameterName}\" cannot be found for this operation",
   "7QymrD": "Required. The string from which the substring is taken.",
   "7S2wtE": "Schema Validation",
@@ -264,11 +262,7 @@
   "ALImBL": "(UTC+00:00) Monrovia, Reykjavik",
   "ANbEeQ": "Required. The name of the action whose values you want.",
   "AO6T9u": "Done",
-  "AX7dq3": "Input node type does not match the schema node's type",
   "AYaqW/": "(UTC+06:30) Yangon (Rangoon)",
-  "AcdX+2": "Insert data from previous step (You can also add by typing / in the editor)",
-  "Aci186": "{label} Add dynamic data pressing Alt + /",
-  "AgrMqq": "Type of '{0}' is '{1}'.",
   "AheXMN": "Select frequency.",
   "Amz9+m": "Enter audience",
   "AnX5yC": "Username",
@@ -333,6 +327,7 @@
   "DuoHXI": "Add an input",
   "DyYcJZ": "Run After",
   "DysO/Q": "Ctrl + Y",
+  "DzT6Hs": "Returns the body for a part in a multipart output from an action.",
   "E+HsWF": "Signing in...",
   "E+iim4": "Select timezone.",
   "E3+TAA": "Schema node ''{nodeName}'' has an input with a mismatched type",
@@ -427,6 +422,7 @@
   "IX1OiA": "Failed to retrieve dynamic outputs, outputs of this operation might not be visible in subsequent actions. Error details: {message}",
   "IXy91L": "Add a target schema",
   "IbGIq3": "Error Code",
+  "IdOhPY": "{label} To add dynamic data, press the Alt + '/' keys.",
   "IjEKvh": "Error executing the api ''{parameters}''.",
   "IjZFjQ": "(UTC+07:00) Barnaul, Gorno-Altaysk",
   "IooQu1": "Advanced options",
@@ -613,6 +609,7 @@
   "SGnTpt": "Heading 2",
   "SJFVxf": "issues",
   "SKXopi": "Convert the parameter to an integer",
+  "SKy5tj": "The input node type doesn't match the schema node's type.",
   "SLJkRn": "Remove input",
   "SLZ0n4": "Checks if the string starts with a value (case-insensitive, invariant culture)",
   "SXb47U": "{minutes}m",
@@ -777,13 +774,9 @@
   "_+20fdv.comment": "Error message when having multiple invalid authentication properties",
   "_+3efoo.comment": "Placeholder when no schema has been added",
   "_+DxBpE.comment": "Load schema error message",
-  "_+JCU+Y.comment": "Tooltip for on-prem gateway connection checkbox",
-  "_+W2vTp.comment": "Placeholder description for a newly inserted Email parameter",
   "_+W9fkq.comment": "Timezone value ",
   "_+ZSBrq.comment": "Accessibility label",
   "_+dlOgj.comment": "Timezone value ",
-  "_+g+mch.comment": "Label for description of custom multipartBody Function",
-  "_+iMTt7.comment": "aria label description for check button",
   "_+jnjtp.comment": "Select a Manual Workflow resource",
   "_+lpuMl.comment": "Required value parameter to return given if function is false",
   "_+xiT4Q.comment": "title for pagination setting",
@@ -941,6 +934,7 @@
   "_5MWmiO.comment": "The title of the line number field in the static result parseJson action",
   "_5OvGgn.comment": "The title of the body field in the static result query action",
   "_5SAQOb.comment": "Authority Label Display Name",
+  "_5UPOY+.comment": "Tooltip for on-prem gateway connection checkbox",
   "_5aa76N.comment": "Label for description of custom first Function",
   "_5akc1Q.comment": "Error message for unsupported values. Do not remove the double single quotes around the placeholder text, as it is needed to wrap the placeholder text in single quotes.",
   "_5b0sKi.comment": "Label for description of custom empty Function",
@@ -971,6 +965,7 @@
   "_7Fyq1F.comment": "No inputs text",
   "_7GSk99.comment": "OK message appearing on a confirmation dialog.",
   "_7KxCGX.comment": "Timezone value ",
+  "_7LMY4I.comment": "Placeholder description for a newly inserted Email parameter",
   "_7LmpNN.comment": "Error message to show in dropdown when dependent parameter is not found",
   "_7QymrD.comment": "Required string parameter required to obtain substring",
   "_7S2wtE.comment": "A label for the schema validation setting",
@@ -1037,11 +1032,7 @@
   "_ALImBL.comment": "Timezone value ",
   "_ANbEeQ.comment": "Required string parameter to determine action wanted",
   "_AO6T9u.comment": "Done Label for button",
-  "_AX7dq3.comment": "Error message for when input node type does not match schema node type",
   "_AYaqW/.comment": "Timezone value ",
-  "_AcdX+2.comment": "Label for button to open dynamic content token picker",
-  "_Aci186.comment": "This is an a11y message meant to help screen reader users figure out how to insert dynamic data",
-  "_AgrMqq.comment": "Error message when having invalid authentication property types",
   "_AheXMN.comment": "Placeholder for Frequency",
   "_Amz9+m.comment": "MSI Audience Placeholder Text",
   "_AnX5yC.comment": "Username Label Display Name",
@@ -1106,6 +1097,7 @@
   "_DuoHXI.comment": "Button to add a dynamically added parameter",
   "_DyYcJZ.comment": "title for run after setting section",
   "_DysO/Q.comment": "Button text for the control-Y button combination to redo the last undone action",
+  "_DzT6Hs.comment": "Label for description of custom multipartBody Function",
   "_E+HsWF.comment": "Text for sign in button while loading.",
   "_E+iim4.comment": "Placeholder for timezone",
   "_E3+TAA.comment": "Body text for the input type mismatch card",
@@ -1200,6 +1192,7 @@
   "_IX1OiA.comment": "Error message to show when loading dynamic outputs failed.",
   "_IXy91L.comment": "label to inform to add a target schema to be used",
   "_IbGIq3.comment": "The title of the error code property within Error in the static result schema",
+  "_IdOhPY.comment": "This is an a11y message meant to help screen reader users figure out how to insert dynamic data",
   "_IjEKvh.comment": "Error message when execute dynamic api in managed connector. Do not remove the double single quotes around the placeholder text, as it is needed to wrap the placeholder text in single quotes.",
   "_IjZFjQ.comment": "Timezone value ",
   "_IooQu1.comment": "Advanced options",
@@ -1386,6 +1379,7 @@
   "_SGnTpt.comment": "Heading 2 text",
   "_SJFVxf.comment": "Issues, plural",
   "_SKXopi.comment": "Label for description of custom int Function",
+  "_SKy5tj.comment": "Error message for when input node type does not match schema node type",
   "_SLJkRn.comment": "Remove input",
   "_SLZ0n4.comment": "Label for description of custom startsWith Function",
   "_SXb47U.comment": "This is a period in time in seconds. {minutes} is replaced by the number and m is an abbreviation of minutes",
@@ -1545,6 +1539,7 @@
   "_Zi9gQK.comment": "Label to add item to property editor",
   "_ZkjTbp.comment": "Text for dynamic content link",
   "_ZnGRMP.comment": "Timezone value ",
+  "_a06OQw.comment": "aria label description for check button",
   "_a7j3gS.comment": "Required number parameter to divide in mod function",
   "_a7x6VI.comment": "Timezone value ",
   "_aAXnqw.comment": "Required number of occurrences to get nthIndexOf function with",
@@ -1770,6 +1765,7 @@
   "_lQNKUB.comment": "Describes connection being added",
   "_lR7V87.comment": "Section header for the functions section",
   "_lUm6fl.comment": "Button text for returning to the canvas",
+  "_lUvgiW.comment": "Error message when having invalid authentication property types",
   "_lZT0JI.comment": "Button to add group",
   "_lcVG4C.comment": "skipped run",
   "_lcxLiq.comment": "Error Message for Invalid Array",
@@ -1845,6 +1841,7 @@
   "_oxH1L/.comment": "Timezone value ",
   "_p/0r2N.comment": "Required string parameter to be used as key for formDataValue function",
   "_p16/4S.comment": "Label text for request or response headers",
+  "_p1IEXb.comment": "Label for button to open dynamic content token picker",
   "_p1Qtm5.comment": "Filter by In App category of connectors",
   "_p5tz8/.comment": "Timezone value ",
   "_pC2nr2.comment": "Placeholder text for Key",
@@ -2066,6 +2063,7 @@
   "_zjDJwP.comment": "This is an option in a dropdown where users can select type Float for their parameter.",
   "_znGyyU.comment": "Label for description of custom addToTime Function",
   "_zxe9hh.comment": "Required integer parameter to subtract minutes from time",
+  "a06OQw": "Select the checkbox to choose this connection.",
   "a7j3gS": "Required. The number to divide by the Divisor.",
   "a7x6VI": "(UTC+08:00) Taipei",
   "aAXnqw": "Required. The number of the occurrence of the substring to find.",
@@ -2291,6 +2289,7 @@
   "lQNKUB": "A line for the parent element is added automatically.",
   "lR7V87": "Functions",
   "lUm6fl": "Return",
+  "lUvgiW": "The type for '{0}' is '{1}'.",
   "lZT0JI": "Add Group",
   "lcVG4C": "is skipped",
   "lcxLiq": "Please enter a valid array",
@@ -2366,6 +2365,7 @@
   "oxH1L/": "(UTC-07:00) Chihuahua, La Paz, Mazatlan",
   "p/0r2N": "Required. The key name of the form data value to return.",
   "p16/4S": "Headers",
+  "p1IEXb": "Enter the data from previous step. You can also add data by typing the '/' character.",
   "p1Qtm5": "In-App",
   "p5tz8/": "(UTC+13:00) Samoa",
   "pC2nr2": "Enter key",
