--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -1,14 +1,11 @@
 {
   "++ZVe/": "Testing",
   "+0yxlR": "Function display",
-  "+20fdv": "Invalid properties '{0}' for authentication type '{1}'.",
-  "+3efoo": "No schema is added",
   "+DxBpE": "Failed loading the schema. Please try again.",
+  "+Uvo/p": "Alt text for down chevron",
   "+W9fkq": "(UTC+08:00) Kuala Lumpur, Singapore",
   "+ZSBrq": "Context menu for {title} card",
   "+dlOgj": "(UTC-05:00) Haiti",
-  "+jnjtp": "Select a Manual Workflow resource",
-  "+lpuMl": "Required. The value to return if the expression is 'false'.",
   "+xiT4Q": "Pagination",
   "+ym4nO": "Tracked Properties",
   "//nQG4": "Select an api from apim instance",
@@ -77,6 +74,7 @@
   "1YEc9e": "Enter a valid condition.",
   "1ZDLZA": "Learn more",
   "1ZSzl6": "Each run after configuration must have at least one status checked",
+  "1dlfUe": "Actions perform operations on data, communicate between systems, or run other tasks.",
   "1ejxkP": "Secure Inputs",
   "1htSs7": "Off",
   "1jhzOM": "Required. The object to check if it is less than value being compared to.",
@@ -158,13 +156,11 @@
   "4vcnOA": "Returns the minimum value in the input array of numbers",
   "4vmGh0": "Service request ID",
   "4wjJs0": "14",
-  "5+MuPz": "Enter a valid double.",
   "5FINOY": "Workflow has parameter validation errors on the following operations: {invalidNodes}",
   "5J7j9k": "Required. The XPath expression to evaluate.",
   "5MWmiO": "Line Number",
   "5OvGgn": "Body",
   "5SAQOb": "Authority",
-  "5UPOY+": "Select this if you are configuring an on-premises connection.",
   "5aa76N": "Returns the first element in the array or string passed in",
   "5akc1Q": "Unsupported 'in' value : ''{value}'' in Parameter",
   "5b0sKi": "Returns true if an object, array, or string is empty",
@@ -195,7 +191,6 @@
   "7Fyq1F": "No inputs",
   "7GSk99": "OK",
   "7KxCGX": "(UTC+10:30) Lord Howe Island",
-  "7LMY4I": "Enter an email address.",
   "7LmpNN": "Parameter \"{parameterName}\" cannot be found for this operation",
   "7QymrD": "Required. The string from which the substring is taken.",
   "7S2wtE": "Schema Validation",
@@ -327,7 +322,6 @@
   "DuoHXI": "Add an input",
   "DyYcJZ": "Run After",
   "DysO/Q": "Ctrl + Y",
-  "DzT6Hs": "Returns the body for a part in a multipart output from an action.",
   "E+HsWF": "Signing in...",
   "E+iim4": "Select timezone.",
   "E3+TAA": "Schema node ''{nodeName}'' has an input with a mismatched type",
@@ -367,6 +361,7 @@
   "FVavKy": "Returns the start of the day to a string timestamp passed in",
   "FXC0Zi": "(UTC+03:00) Baghdad",
   "FXLR5M": "{hours, plural, one {# hour} other {# hours}}",
+  "FYtDP0": "Enter an email address.",
   "Fgq3Db": "Required. The collection to take the last object from.",
   "Fh2HDb": "Returns the first index of a value within a string (case-insensitive, invariant culture)",
   "FiyQjU": "2",
@@ -425,6 +420,7 @@
   "IdOhPY": "{label} To add dynamic data, press the Alt + '/' keys.",
   "IjEKvh": "Error executing the api ''{parameters}''.",
   "IjZFjQ": "(UTC+07:00) Barnaul, Gorno-Altaysk",
+  "Io48jC": "The '{0}' properties are invalid for the '{1}' authentication type.",
   "IooQu1": "Advanced options",
   "Ip7Iax": "Returns the index of the n-th occurrence of a value within a string (case-insensitive, invariant culture)",
   "IpVwYT": "Returns the first non-null object in the arguments passed in",
@@ -453,6 +449,7 @@
   "K7/DnZ": "Output",
   "K90YEU": "Returns a subset of characters from a string",
   "KBaGkS": "Change connection reference",
+  "KP0Rr2": "Enter a valid Double number.",
   "KX1poC": "{actionCount, plural, one {# Case} =0 {0 Cases} other {# Cases}}",
   "KYX5Do": "Underline (⌘U)",
   "KZOa5l": "Cancel",
@@ -526,6 +523,7 @@
   "O36+wl": "Edit Parameter",
   "O9ZExg": "OK",
   "OD8igU": "Required. A string that contains the time zone name of the source time zone. See https://msdn.microsoft.com/en-us/library/gg154758.aspx for details.",
+  "ODQCKj": "Converts the input to a JSON type value.",
   "OEEuUu": "Secret",
   "OFKZzQ": "Operation options:",
   "OGUVGd": "(UTC+11:00) Bougainville Island",
@@ -575,11 +573,9 @@
   "Q0xpPQ": "Required. The object to check if it is less or equal to the comparing object.",
   "Q4TUFX": "Discard",
   "Q5w4Do": "Add dynamic data or expressions by inserting a /",
+  "Q8HCYK": "No items",
   "Q8zxeb": "{name} Key",
-  "QEp3C8": "Convert the input to a JSON type value",
   "QGbUXX": "Status code",
-  "QIOOQU": "No Items",
-  "QZ5DZl": "alt text for chevron down",
   "QZBPUx": "Returns a single value matching the key name from form-data or form-encoded trigger output",
   "QZrxUk": "String functions",
   "QbJDi7": "Item",
@@ -695,8 +691,6 @@
   "W6FdMh": "Required. The name of the new property.",
   "WGwH45": "Clear",
   "WK6hZX": "Select all text in {label}",
-  "WLj8DH": "Please enter a valid dictionary",
-  "WOOYW1": "Actions perform operations on data or communicate between systems to execute.",
   "WS9kXD": "Required. The first integer in the array.",
   "WTZvGW": "Workflow has invalid connections on the following operations: {invalidNodes}",
   "WUe3DY": "Shorthand for trigger().outputs",
@@ -771,14 +765,11 @@
   "ZnGRMP": "(UTC+07:00) Tomsk",
   "_++ZVe/.comment": "Title for testing section",
   "_+0yxlR.comment": "Label for the function display radio group",
-  "_+20fdv.comment": "Error message when having multiple invalid authentication properties",
-  "_+3efoo.comment": "Placeholder when no schema has been added",
   "_+DxBpE.comment": "Load schema error message",
+  "_+Uvo/p.comment": "Alt text for down chevron",
   "_+W9fkq.comment": "Timezone value ",
   "_+ZSBrq.comment": "Accessibility label",
   "_+dlOgj.comment": "Timezone value ",
-  "_+jnjtp.comment": "Select a Manual Workflow resource",
-  "_+lpuMl.comment": "Required value parameter to return given if function is false",
   "_+xiT4Q.comment": "title for pagination setting",
   "_+ym4nO.comment": "Label for the Tracked Properties field in the settings section",
   "_//nQG4.comment": "Label for api selection",
@@ -847,6 +838,7 @@
   "_1YEc9e.comment": "Invalid Json",
   "_1ZDLZA.comment": "Text for learn more link",
   "_1ZSzl6.comment": "error message for deselection of last run after status",
+  "_1dlfUe.comment": "Description of what Actions are, on a tooltip about Actions",
   "_1ejxkP.comment": "title for the secure inputs setting",
   "_1htSs7.comment": "label when setting is off",
   "_1jhzOM.comment": "Required object parameter to compare to in greater function",
@@ -928,13 +920,11 @@
   "_4vcnOA.comment": "Label for description of custom min Function",
   "_4vmGh0.comment": "Label text for retry service request ID",
   "_4wjJs0.comment": "Hour of the day",
-  "_5+MuPz.comment": "Error validation message",
   "_5FINOY.comment": "Error message to show when there are invalid connections in the nodes.",
   "_5J7j9k.comment": "Required xpath parameter to identify which xPath to evaluate",
   "_5MWmiO.comment": "The title of the line number field in the static result parseJson action",
   "_5OvGgn.comment": "The title of the body field in the static result query action",
   "_5SAQOb.comment": "Authority Label Display Name",
-  "_5UPOY+.comment": "Tooltip for on-prem gateway connection checkbox",
   "_5aa76N.comment": "Label for description of custom first Function",
   "_5akc1Q.comment": "Error message for unsupported values. Do not remove the double single quotes around the placeholder text, as it is needed to wrap the placeholder text in single quotes.",
   "_5b0sKi.comment": "Label for description of custom empty Function",
@@ -965,7 +955,6 @@
   "_7Fyq1F.comment": "No inputs text",
   "_7GSk99.comment": "OK message appearing on a confirmation dialog.",
   "_7KxCGX.comment": "Timezone value ",
-  "_7LMY4I.comment": "Placeholder description for a newly inserted Email parameter",
   "_7LmpNN.comment": "Error message to show in dropdown when dependent parameter is not found",
   "_7QymrD.comment": "Required string parameter required to obtain substring",
   "_7S2wtE.comment": "A label for the schema validation setting",
@@ -1097,7 +1086,6 @@
   "_DuoHXI.comment": "Button to add a dynamically added parameter",
   "_DyYcJZ.comment": "title for run after setting section",
   "_DysO/Q.comment": "Button text for the control-Y button combination to redo the last undone action",
-  "_DzT6Hs.comment": "Label for description of custom multipartBody Function",
   "_E+HsWF.comment": "Text for sign in button while loading.",
   "_E+iim4.comment": "Placeholder for timezone",
   "_E3+TAA.comment": "Body text for the input type mismatch card",
@@ -1137,6 +1125,7 @@
   "_FVavKy.comment": "Label for description of custom startOfDay Function",
   "_FXC0Zi.comment": "Timezone value ",
   "_FXLR5M.comment": "A duration of time shown in hours",
+  "_FYtDP0.comment": "The placeholder description for a newly inserted 'Email' parameter.",
   "_Fgq3Db.comment": "Required collection parameter to apply last function on",
   "_Fh2HDb.comment": "Label for description of custom indexOf Function",
   "_FiyQjU.comment": "Hour of the day",
@@ -1195,6 +1184,7 @@
   "_IdOhPY.comment": "This is an a11y message meant to help screen reader users figure out how to insert dynamic data",
   "_IjEKvh.comment": "Error message when execute dynamic api in managed connector. Do not remove the double single quotes around the placeholder text, as it is needed to wrap the placeholder text in single quotes.",
   "_IjZFjQ.comment": "Timezone value ",
+  "_Io48jC.comment": "Error message when having multiple invalid authentication properties",
   "_IooQu1.comment": "Advanced options",
   "_Ip7Iax.comment": "Label for description of custom nthIndexOf Function",
   "_IpVwYT.comment": "Label for description of custom coalesce Function",
@@ -1223,6 +1213,7 @@
   "_K7/DnZ.comment": "The title of the output field in the static result parseJson action",
   "_K90YEU.comment": "Label for description of custom substring Function",
   "_KBaGkS.comment": "Button text to take the user to the 'change connection' component while in xrm connection reference mode",
+  "_KP0Rr2.comment": "Error validation message",
   "_KX1poC.comment": "This is the number of cases or options the program can take",
   "_KYX5Do.comment": "Command for underline text for Mac users",
   "_KZOa5l.comment": "Label for cancel button",
@@ -1296,6 +1287,7 @@
   "_O36+wl.comment": "Edit Button Tooltip Text",
   "_O9ZExg.comment": "Confirmation text for delete button",
   "_OD8igU.comment": "Required string parameter for source time zone",
+  "_ODQCKj.comment": "Label for description of custom json Function",
   "_OEEuUu.comment": "Secret Label Display Name",
   "_OFKZzQ.comment": "Label text for workflow operation options",
   "_OGUVGd.comment": "Timezone value ",
@@ -1345,11 +1337,9 @@
   "_Q0xpPQ.comment": "Required object parameter to check if less than or equal to using lessOrEqual function",
   "_Q4TUFX.comment": "Button text for discard the unsaved changes",
   "_Q5w4Do.comment": "This is an a11y message meant to help screen reader users figure out how to insert dynamic data",
+  "_Q8HCYK.comment": "Message to show when there are no items to show",
   "_Q8zxeb.comment": "Accessibility Label for dictionary text key field",
-  "_QEp3C8.comment": "Label for description of custom json Function",
   "_QGbUXX.comment": "Response status code for test map API",
-  "_QIOOQU.comment": "Message to show when there are no items to show",
-  "_QZ5DZl.comment": "alt text for chevron down",
   "_QZBPUx.comment": "Label for description of custom triggerFormDataValue Function",
   "_QZrxUk.comment": "Label for string functions",
   "_QbJDi7.comment": "Label for single item inside an array.",
@@ -1465,8 +1455,6 @@
   "_W6FdMh.comment": "Required string parameter for new property name in addProperty function",
   "_WGwH45.comment": "Label to clear editor",
   "_WK6hZX.comment": "Accessibility label for a button to select all text in a value box",
-  "_WLj8DH.comment": "Error Message for Invalid Dictionary",
-  "_WOOYW1.comment": "Description of what Actions are, on a tooltip about Actions",
   "_WS9kXD.comment": "Required number parameter to identify lower bound in range function",
   "_WTZvGW.comment": "Error message to show when there are invalid connections in the nodes.",
   "_WUe3DY.comment": "Label for description of custom triggerOutputs Function",
@@ -1539,7 +1527,6 @@
   "_Zi9gQK.comment": "Label to add item to property editor",
   "_ZkjTbp.comment": "Text for dynamic content link",
   "_ZnGRMP.comment": "Timezone value ",
-  "_a06OQw.comment": "aria label description for check button",
   "_a7j3gS.comment": "Required number parameter to divide in mod function",
   "_a7x6VI.comment": "Timezone value ",
   "_aAXnqw.comment": "Required number of occurrences to get nthIndexOf function with",
@@ -1588,8 +1575,10 @@
   "_cP4UkW.comment": "error message for invalid retry interval",
   "_cR9RtV.comment": "Title for discard modal",
   "_cT2MlP.comment": "Timezone value ",
+  "_cUW5m8.comment": "Aria label description for check button",
   "_cVIZTQ.comment": "Timezone value ",
   "_ca/QIc.comment": "The title of the error message property within Error in the static result schema",
+  "_ceVB5l.comment": "Label for the description of the custom 'multipartBody' function",
   "_cgq/+y.comment": "Placehodler text for dropdown",
   "_ciLkfU.comment": "Command for bold text for Mac users",
   "_cj+kyo.comment": "This is a status message to be shown in a monitoring view",
@@ -1599,6 +1588,7 @@
   "_cr0UnG.comment": "Hour of the day",
   "_cscezV.comment": "Required collection parameter to apply skip function on",
   "_ctI9Pp.comment": "Message on missing XSLT and attempting to test maps",
+  "_d+MjsE.comment": "Error Message for Invalid Dictionary",
   "_d4xMIx.comment": "Timezone value ",
   "_dBWIjR.comment": "Title for an unconnected required schema card",
   "_dBxX0M.comment": "Text for the \"Add Trigger\" page header",
@@ -1752,6 +1742,7 @@
   "_kZuYgD.comment": "Label for description of custom less Function",
   "_kc5Mui.comment": "Timezone value ",
   "_keb4r1.comment": "Label for description of custom equals Function",
+  "_kkMrF6.comment": "Tooltip for the on-premises data gateway connection checkbox",
   "_klpJg1.comment": "Username Placeholder Text",
   "_kneb9/.comment": "Timezone value ",
   "_knylNW.comment": "Required integer parameter to be used as upper bound for rand function",
@@ -1808,6 +1799,7 @@
   "_nCa0KG.comment": "The title of the internal errors field in the static result parseJson action",
   "_nGds/r.comment": "Required object parameter to compare to in greaterOrEqual function",
   "_nHseED.comment": "Required integer parameter to see how far in the future",
+  "_nNWAAh.comment": "Placeholder when no schema has been added",
   "_nOWGAV.comment": "End time text",
   "_nOhve4.comment": "Label for Bool type dynamically added parameter",
   "_nRpM02.comment": "Custom category name text",
@@ -1863,6 +1855,8 @@
   "_q1gfIs.comment": "Text on example trigger node",
   "_q2OCEx.comment": "Required parameter for new property value in addProperty function",
   "_q2w8Sk.comment": "Label for description of custom string Function",
+  "_q4ChjK.comment": "Select workflow with 'manual' trigger",
+  "_q5TkqE.comment": "Required value parameter to return given if function is false",
   "_q87X20.comment": "Label for description of custom addSeconds Function",
   "_q8vnZQ.comment": "tool tip explaining what schema validation setting does",
   "_q9hf8i.comment": "Timezone value ",
@@ -2063,7 +2057,6 @@
   "_zjDJwP.comment": "This is an option in a dropdown where users can select type Float for their parameter.",
   "_znGyyU.comment": "Label for description of custom addToTime Function",
   "_zxe9hh.comment": "Required integer parameter to subtract minutes from time",
-  "a06OQw": "Select the checkbox to choose this connection.",
   "a7j3gS": "Required. The number to divide by the Divisor.",
   "a7x6VI": "(UTC+08:00) Taipei",
   "aAXnqw": "Required. The number of the occurrence of the substring to find.",
@@ -2112,8 +2105,10 @@
   "cP4UkW": "Retry Policy interval is invalid, must match ISO 8601 duration format",
   "cR9RtV": "Discard changes",
   "cT2MlP": "(UTC+11:00) Chokurdakh",
+  "cUW5m8": "Select the checkbox to choose this connection.",
   "cVIZTQ": "(UTC+02:00) Tripoli",
   "ca/QIc": "Error Message",
+  "ceVB5l": "Returns the body for a part in a multipart output from an action.",
   "cgq/+y": "Please select an identity",
   "ciLkfU": "Bold (⌘B)",
   "cj+kyo": "Cancelled",
@@ -2123,6 +2118,7 @@
   "cr0UnG": "9",
   "cscezV": "Required. The collection to skip the first Count objects from.",
   "ctI9Pp": "Generate XSLT first before attempting to test mappings.",
+  "d+MjsE": "Enter a valid dictionary.",
   "d4xMIx": "(UTC+02:00) Harare, Pretoria",
   "dBWIjR": "Schema is missing required inputs",
   "dBxX0M": "Add a trigger",
@@ -2276,6 +2272,7 @@
   "kZuYgD": "Returns true if the first argument is less than the second",
   "kc5Mui": "(UTC-02:00) Mid-Atlantic - Old",
   "keb4r1": "Returns true if two values are equal",
+  "kkMrF6": "Select this if you are configuring an on-premises connection.",
   "klpJg1": "Enter username",
   "kneb9/": "(UTC-12:00) International Date Line West",
   "knylNW": "Required. This value is the next integer after the highest integer that could be returned.",
@@ -2332,6 +2329,7 @@
   "nCa0KG": "Internal Errors",
   "nGds/r": "Required. The object to check if it is less than or equal to value being compared to.",
   "nHseED": "Required. The number of time units the desired time is in the future.",
+  "nNWAAh": "No schema is added.",
   "nOWGAV": "End time",
   "nOhve4": "Yes/No",
   "nRpM02": "Custom",
@@ -2387,6 +2385,8 @@
   "q1gfIs": "Add a trigger",
   "q2OCEx": "Required. The value to assign to the property.",
   "q2w8Sk": "Convert the parameter to a string",
+  "q4ChjK": "Select workflow with 'manual' trigger",
+  "q5TkqE": "Required. The value to return if the expression is false.",
   "q87X20": "Adds an integer number of seconds to a string timestamp passed in",
   "q8vnZQ": "Validate request body against the schema provided. In case there is a mismatch, HTTP 400 will be returned.",
   "q9hf8i": "(UTC+04:00) Astrakhan, Ulyanovsk",
